--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	
 <div id="content">	
-    <canvas id="myCanvas"></canvas>
+    <canvas id="myCanvas" marginheight="-70"></canvas>
     <script type="text/javascript" src="bubbles.js"></script>
     <script type="text/javascript" src="main.js"></script>
 	</div>
