--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <script type="text/javascript" src="alphabet.js"></script>
 <body>
 	
-<div id="content">	
-    <canvas id="myCanvas" marginheight="-70"></canvas>
+<div style="width: 100%; height: 400px; overflow: hidden">	
+    <canvas id="myCanvas" style="position: relative; left: -10px; top: -120px"></canvas>
     <script type="text/javascript" src="bubbles.js"></script>
     <script type="text/javascript" src="main.js"></script>
-	</div>
+</div>
 	</body>
 </html>
