--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	
 <div style="width: 100%; height: 400px; overflow: hidden">	
-    <canvas id="myCanvas" style="position: relative; left: -10px; top: -120px"></canvas>
+    <canvas id="myCanvas" style="position: relative; left: -10px; top: -120px; bottom: -120px"></canvas>
     <script type="text/javascript" src="bubbles.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </div>
