--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="alphabet.js"></script>
 <body>
 	
-<div style="width: 100%; height: 400px; overflow: hidden; display: block; margin-left: auto; margin-right: auto">	
+<div style="width: 100%; height: 400px; overflow: hidden; display: block; text-align: center>	
     <canvas id="myCanvas" style="position: relative; left: -10px; top: -120px; bottom: -120px"></canvas>
     <script type="text/javascript" src="bubbles.js"></script>
     <script type="text/javascript" src="main.js"></script>
